k8s/web-admin-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-admin-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-admin-pod

  template:
    metadata:
      labels:
        app: web-admin-pod
    spec:
      containers:
      - name: web-admin-container
        #image: docker.pkg.github.com/donk3ys/docker-images/zink-web-admin:latest
        image: zink-web-admin
        #image: donk3ee/zink-web-admin
        imagePullPolicy: Never
        ports:
        - containerPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: web-admin-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: web-admin-pod
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
